- implemented page caching; at the moment pages are cached if the user is not
  logged in; caching and expiry times can be configured in local.php
- added option to disable all patching rather than disabling all patches
  individually;
- fix bug in installation screen when gzip compression enabled
- added cache manager admin screen to be able to manually clear the page cache

Release 0.6.2:
- Added patch support for main index.php; this means ZenMagick does not
  overwrite existing files any more!
- new admin menu item 'Installation'; this is either under tools if file
  permissions do not allow to add the ZenMagick menu, or under ZenMagick
- return error view when ez page not found; same for product page and a few
  more
- zm_setting(..) now accepts a second parameter to set values; the return
  value is the old value or null
- upaded local.in.php to reflect this change; using $_ZM_SETTINGS is not
  deprecated - this might eventually disappear altogether...
- added getDefaultCategory() to ZMProduct; this will return either the master
  category or the first mapped category for the product
- fixed invalid db code in ZMProducts.php
- option to disable language support for ez-pages as zen-cart ignores the
  languages_id (disabled as default)
- Fix double slash '//' in pretty URLs
- add option to .htaccess file to make it work under *nix
- added page_not_found view
- fix missing chapter for pretty links
- added new ZMAjaxController; controller may now return null as view if they
  generate content themselfs
- phpdoc, again...
- added foreign keys to the features.sql
- features SQL can now be installed using the ZenMagick installation screen
- added examples of how to disable automatic zen-cart patching to local.in.php
- features SQL can now be installed using the ZenMagick installation page
- view path for non default themes in ZMThemeView
- added support to enable/disable the crumbtrail
- Fixed broken fragment (eg: #bottom) for pretty links