@@ -26,8 +26,7 @@
 <?php  
 require('includes/application_top.php');
 require('includes/zmCatalogDtree.php');
-require('../zenmagick/init.php');
-require('../zenmagick/admin_init.php');
+require_once(DIR_FS_CATALOG.'zenmagick/init.php'); 
 
     // capture output as CMPs might redirect...
     ob_start();
