@@ -29,8 +29,7 @@
 define('GZIP_LEVEL', 0);
 ob_start(); require('sqlpatch.php'); ob_end_clean();
 require_once('includes/application_top.php');
-require_once('../zenmagick/init.php');
-require_once('../zenmagick/admin_init.php');
+require_once(DIR_FS_CATALOG.'zenmagick/init.php'); 
 
     // locale
     $patchLabel = array(
