@@ -58,8 +58,7 @@
     $_ZM_SETTINGS['isJSTarget'] = true;
 
     // system
-    $_ZM_SETTINGS['isAdmin'] = defined('IS_ADMIN_FLAG');
-
+    $_ZM_SETTINGS['isAdmin'] = defined('IS_ADMIN_FLAG') && IS_ADMIN_FLAG;
     $_ZM_SETTINGS['isEnableOB'] = GZIP_LEVEL != '1';
     $_ZM_SETTINGS['isEnableSSL'] = ENABLE_SSL == 'true';
     $_ZM_SETTINGS['isForceCookieUse'] = SESSION_FORCE_COOKIE_USE == 'True';
